--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 pandas = "^2.2.0"
 numpy = "^1.26.4"
 tqdm = "^4.66.2"
+pyarrow = "^15.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
