--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.12"
 pandas = "^2.2.0"
 numpy = "^1.26.4"
 tqdm = "^4.66.2"
+fastapi = "^0.110.0"
+uvicorn = "^0.27.1"
+hydra-core = "^1.3.2"
+aiogram = "^3.4.1"
 
 
 [tool.poetry.group.dev.dependencies]
